# CMakeQtDemo

./: .clang-format  CMakeLists.txt  README.md
src/QComboBoxFontColor/: CMakeLists.txt  colormosaicbar.h  colorselectcombobox.cpp  colorselectcombobox.h  main.cpp
src/QLineEditSearch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/QTableViewModelDelegate/: CMakeLists.txt  main.cpp
src/QTableViewModelDelegate/core/: QItemTableModel.cpp  QItemTableModel.h  QProgressBarDelegate.cpp  QProgressBarDelegate.h
src/QTableViewModelDelegate/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/QTableviewDelegateDemo/: main.cpp  mainwindow.cpp  mainwindow.h  qtableviewdelegate.cpp  qtableviewdelegate.h  qtableviewdelegate.pro  tableview.cpp  tableview.h  tableview.ui  ui_tableview.h
src/QTreeBFS_DFS/: README.md  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled4.pro
src/QTreeWidgetExt/: README.md  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtreeitemcheckwidget.cpp  qtreeitemcheckwidget.h  qtreeitemcheckwidget.ui  qtreewidgetext.cpp  qtreewidgetext.h  qtreewidgetext.pro
src/QZxing/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  QMainWindow.h  main.cpp
src/dbdelegate/build-dbdelegate-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
src/dbdelegate/build-dbdelegate-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
src/dbdelegate/build-dbdelegate-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: GL.h.3714B5694EF3EC89.idx  PropIdl.h.66F68942B713D54D.idx  PropIdlBase.h.A53585CC39244A90.idx  QButtonGroup.B43408708E05AF8F.idx  QCommonStyle.FB664D117A448FBB.idx  QDeadlineTimer.E3A7C5E7ABA70D18.idx  QImage.88960BF0AFC4239E.idx  QLayout.420E7594B66D2DB6.idx  QMatrix3x3.46318C1B8ECA5D61.idx  QMatrix4x4.C57BDEE3D25C68A2.idx  QModelIndex.A4245018B2E95030.idx  QObject.EFF9C4572419BB97.idx  QPaintDevice.660AAA3E79176290.idx  QPaintDeviceWindow.6072CD4E382CC928.idx  QPixmap.62518DF7882973D5.idx  QRect.FE0452E47EE4E74C.idx  QScrollerProperties.F049033D6F032336.idx  QSharedDataPointer.38CB20151B5C1C2C.idx  QSize.F05E260891174BCE.idx  QSizeF.5E2D556361703C67.idx  QStyledItemDelegate.F1D7A869E250375B.idx  QTransform.53A759F89ECC13EF.idx  QTreeWidget.CEE4A3B4D66507E5.idx  QVector3D.5D21FB2840E479E4.idx  QtCore.9E64FEF9E133FAA1.idx  QtGui.04DFEC0ECC3F0751.idx  QtWidgets.725BBAF293D3735A.idx  QtWidgetsDepends.0739C1E69B77972C.idx  Unknwn.h.85DFD8594D14448C.idx  Unknwnbase.h.89BEBD6FCAF917F3.idx  WTypesbase.h.DF46BC79A6303AC2.idx  WinBase.h.AD7D1492458CE839.idx  WinNls.h.4E95AB29E262865E.idx  WinUser.h.C9A6D84B61A2F832.idx  Windows.h.99235D2C43F6DB81.idx  __msvc_int128.hpp.60347E5991BFD52B.idx  __msvc_iter_core.hpp.608A8A8A8ED4D4F2.idx  __msvc_system_error_abi.hpp.587BB2E22F5721FA.idx  __msvc_xlocinfo_types.hpp.6BACB52B8782A9C2.idx  adxintrin.h.09F5CD8626F38441.idx  (+576 more)
src/dbdelegate/build-dbdelegate-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/temp/moc/: moc_appinit.cpp  moc_dbdelegate.cpp  moc_frmmain.cpp  moc_frmsimple.cpp  moc_frmtableview.cpp  moc_frmtablewidget.cpp  moc_frmtreeview.cpp  moc_frmtreewidget.cpp  moc_iconhelper.cpp  moc_predefs.h
src/dbdelegate/build-dbdelegate-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/temp/rcc/: qrc_image.cpp  qrc_main.cpp  qrc_qm.cpp
src/dbdelegate/build-dbdelegate-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/temp/ui/: ui_frmmain.h  ui_frmsimple.h  ui_frmtableview.h  ui_frmtablewidget.h  ui_frmtreeview.h  ui_frmtreewidget.h
src/dbdelegate/core_common/: quihelper.cpp  quihelper.h
src/dbdelegate/dbdelegate/: dbdelegate.pro  head.h  main.cpp  main.qrc  readme.txt
src/dbdelegate/dbdelegate/app/: app.pri  appfun.cpp  appfun.h  dbdelegate.cpp  dbdelegate.h
src/dbdelegate/dbdelegate/form/: form.pri  frmmain.cpp  frmmain.h  frmmain.ui  frmsimple.cpp  frmsimple.h  frmsimple.ui  frmtableview.cpp  frmtableview.h  frmtableview.ui  frmtablewidget.cpp  frmtablewidget.h  frmtablewidget.ui  frmtreeview.cpp  frmtreeview.h  frmtreeview.ui  frmtreewidget.cpp  frmtreewidget.h  frmtreewidget.ui
